updates style and pages

--- a/src/layouts/all.sass
+++ b/src/layouts/all.sass
@@ -1,11 +1,12 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-$kaldi-red: #FD461E
-$kaldi-red-invert: #fff
+$the-mat-teal: #28B5C1
+$the-mat-teal-invert: #fff
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+$primary: $the-mat-teal
+$primary-invert: $the-mat-teal-invert
+$link: $primary
 
 .content .taglist
   list-style: none
